# PolarfireSoC

./: .gitattributes  .gitignore  README.md  TODO.md
bsp/: README.md
bsp/device-tree/: README.md
bsp/device-tree/linux/: amp-shmem-overlay.dtsi
bsp/device-tree/zephyr/: mpfs-amp.overlay
bsp/hss/: README.md
bsp/hss/manifests/: amp_linux_zephyr.yaml
bsp/hss/payloads/: README.md
bsp/libero/: README.md
docs/: README.md  resources_budgeting.md
docs/architecture/: amp.md  interconnect.md  memory_layout.md  overview.md  radar_dsp.md  system_architecture.md  target.md
docs/workflows/: linux_fast_boot.md  qnx_amp.md  yocto_build.md  zephyr_amp.md
include/amp/: shmem_layout.h
linux/: README.md
linux/kernel/: README.md
linux/kernel/fragments/: mpfs_amp.fragment
linux/rootfs/: README.md
linux/rootfs/scripts/: amp-shmem-setup.sh  zephyr_ipc_gateway.sh
linux/userspace/: README.md
qnx/: README.md
qnx/apps/: README.md
qnx/bsp/: README.md
qnx/ipc/: README.md
scripts/: README.md
scripts/deploy/: README.md
scripts/env/: README.md  setup-libero-env.ps1  setup-libero-env.sh  setup-yocto-env.ps1  setup-yocto-env.sh  setup-zephyr-env.ps1  setup-zephyr-env.sh
sim/: README.md
yocto/: README.md
yocto/manifests/: default.xml
zephyr/: README.md  west.yml
zephyr/apps/: README.md
zephyr/apps/amp_pingpong/: CMakeLists.txt  Kconfig  README.md  prj.conf
zephyr/apps/amp_pingpong/src/: main.c
zephyr/boards/: README.md  mpfs_discovery_u54_1.overlay  mpfs_discovery_u54_2.overlay  mpfs_discovery_u54_3.overlay
zephyr/modules/: README.md
(+24 files in other folders)
